--- a/Application/Teacher/View/Apply/position.html
+++ b/Application/Teacher/View/Apply/position.html
@@ -12,7 +12,7 @@
                         <li><a href="{:U('Apply/index')}" >实习申请</a></li>
                         <!--<li><a href="{:U('Apply/corporation')}" class="on">实习单位变更</a></li>-->
                         <!--<li><a href="{:U('Apply/position')}">实习岗位变更</a></li>-->
-                        <li><a href="#">实习变更</a></li>
+                        <li><a href="#" class="on">实习变更</a></li>
                         <li><a href="{:U('Apply/leave')}">请假申请</a></li>
                     </ul>
                 </div>
@@ -122,16 +122,7 @@
             </div>
             <div class="ht35"></div>
             <div class="ui-paging">
-                <span>共15页，共143条记录</span>
-                &nbsp;
-                <ul>
-                    <li><a href=""><</a></li>
-                    <li><a href="" class="on">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">></a></li>
-                </ul>
+                {$page} 
                 <div class="pull-left">
                     <a href="" class="cbox"><i></i>全选</a>
                 </div>
