--- a/Application/Teacher/View/Notice/index.html
+++ b/Application/Teacher/View/Notice/index.html
@@ -23,7 +23,7 @@
                     <div class="tool">
                         <p>
                             <a href="/teacher.php?c=notice&a=add">新增</a>
-                            <a href="#">刪除</a>
+                            <a href="javascript:void(0)" id="deleteall">删除</a>
                         </p>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         </tr>
                         <volist name="data" id="vo">
                             <tr>
-                                <td><a href="" class="cbox"></a></td>
+                                <td><a href="" class="cbox" attr-id="{$vo.nid}"></a></td>
                                 <td>{$vo.content}</td>
                                 <td>{$vo.teacher_name}</td>
                                 <td>{$vo.name}</td>
@@ -59,18 +59,9 @@
             </div>
             <div class="ht35"></div>
             <div class="ui-paging">
-                <span>共15页，共143条记录</span>
-                &nbsp;
-                <ul>
-                    <li><a href=""><</a></li>
-                    <li><a href="" class="on">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">></a></li>
-                </ul>
+                {$page} 
                 <div class="pull-left">
-                    <a href="" class="cbox"><i></i>全选</a>
+                    <a href="" class="cbox" attr-id="0"><i></i>全选</a>
                 </div>
             </div>
         </div>
@@ -90,6 +81,31 @@
 
 </style>
 <script>
+    $('#deleteall').click(function(){
+        var ids = new Array();
+        $('.cbox').each(function(i){
+            if($(this).attr('class')=='cbox on'){
+                if($(this).attr('attr-id')>0)
+                ids[ids.length]=$(this).attr('attr-id');
+            }
+        });
+        if(ids.length>0)
+            layer.confirm('您真的要删除选中记录吗?', {icon: 3, title:'删除记录'}, function(index){
+                var $url = "{:U('Notice/del')}";
+                $.post($url,{id:ids},function(msg){
+                    if(msg.status==1){
+                        layer.msg(msg.message,{icon:6},function(){
+                            window.location.href="/teacher.php/Notice/index";
+                        });
+                    }else{
+                        layer.msg(msg.message,{icon:5},function(){
+                            window.location.href="/teacher.php/Notice/index";
+                        });
+                    }
+                },'JSON');
+            })
+    });
+
     var SCOPE = {
         'jump_url' : '/index.php?m=teacher&c=notice&a=index',
         'set_status_url':'/index.php?m=teacher&c=notice&a=del',
