--- a/Application/Teacher/View/Report/month.html
+++ b/Application/Teacher/View/Report/month.html
@@ -17,56 +17,72 @@
         <div class="container">
             <div class="ht10"></div>
             <div class="ui-filter">
-                <div class="select">
-                    <select name="" id="">
-                        <option value="">提交人</option>
-                        <option value="">董嘉耀</option>
-                        <option value="">侯震</option>
-                        <option value="">郭德纲</option>
-                        <option value="">董嘉耀</option>
-                    </select>
-                </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">批阅情况</a></p>
+                    <p><a href="#">院系</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">已批阅</a></p>
-                            <p><a href="">未批阅</a></p>
+                            <volist name="department" id="v">
+                            <p><a href="javascript:void(0)" name="department" attr-id="{$v.id}">{$v.dname}</a></p>
+                            </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">班级</a></p>
+                    <p><a href="#">专业</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">机设011</a></p>
-                            <p><a href="">自动化002</a></p>
+                        <volist name="profession" id="v">
+                            <p><a href="" name="profession" attr-id="{$v.id}">{$v.name}</a></p>
+                        </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">实习单位</a></p>
+                    <p><a href="#">班级</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">金龙集团</a></p>
-                            <p><a href="">安溪太阳能</a></p>
+                            <volist name="class" id="v">
+                            <p><a href="" name="class" attr-id="{$v.id}">{$v.classname}</a></p>
+                            </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
-                <a href="" class="bt">查询</a>
+                <div class="select">
+                    <p><a href="#">实习单位</a></p>
+                    <div class="ex">
+                        <div class="list">
+                            <volist name="corporation" id="v">
+                            <p><a href="" name="corporation" attr-id="{$v.id}">{$v.name}</a></p>
+                            </volist>
+                        </div>
+                    </div>
+                </div>
+                <div class="select">
+                    <p><a href="#">批阅情况</a></p>
+                    <div class="ex">
+                        <div class="list">
+                            <p><a name="status" attr-id="2" href="">已批阅</a></p>
+                            <p><a name="status" attr-id="1" href="">未批阅</a></p>
+                        </div>
+                    </div>
+                </div>
+                <span class="wh10"></span>
+                <input type="text" class="text control-form" id="keywords" placeholder="请输入学号/姓名">
+                <span class="wh10"></span>
+                <a href="javascript:void(0)" class="bt">查询</a>
             </div>
             <div class="ht30"></div>
             <div class="ui-table">
                 <div class="hd">
                     <div class="tool">
                         <p>
-                            <a href="">导出</a>
+                            <a href="{:U('Report/exportMonth')}">导出</a>
                             &nbsp;
-                            <a href="">删除</a>
+                            <a href="javascript:void(0)" id="deleteall">删除</a>
                         </p>
                     </div>
                 </div>
@@ -104,16 +120,7 @@
             </div>
             <div class="ht35"></div>
             <div class="ui-paging">
-                <span>共15页，共143条记录</span>
-                &nbsp;
-                <ul>
-                    <li><a href=""><</a></li>
-                    <li><a href="" class="on">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">></a></li>
-                </ul>
+                {$page} 
                 <div class="pull-left">
                     <a href="" class="cbox"><i></i>全选</a>
                 </div>
@@ -129,31 +136,92 @@
     </div>
 </footer>
 <script>
-    $('.edit').click(function(){
-        var $url = "{:U('Report/edit')}";
-        var $id = $(this).attr('attr-id');
-        var $status = $(this).attr('attr-status');
-        $.post($url,{rid:$id,status:$status},function(msg){
-            window.location.href = msg;
-        },'JSON');
-    });
-
-    //删除
-    $('.del').click(function(){
-        var $data = $(this).attr('attr-id');
-        layer.confirm('您真的要删除本条记录吗?', {icon: 3, title:'删除记录'}, function(index){
-            var $url = "{:U('Report/del')}";
-            $.post($url,{id:$data},function(msg){
-                if(msg.status==1){
-                    layer.msg(msg.message,{icon:6},function(){
-                        window.location.href="/teacher.php/Report/month";
-                    });
-                }else{
-                    layer.msg(msg.message,{icon:5},function(){
-                        window.location.href="/teacher.php/Report/month";
-                    });
+    $(function(){
+        $('.bt').click(function(){
+            var _department = 0;
+            var _profession = 0;
+            var _class = 0;
+            var _corporation = 0;
+            var _status = 0;
+            $("a[name^='department']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _department = $(this).attr('attr-id');
                 }
+            })
+            $("a[name^='profession']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _profession = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='class']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _class = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='corporation']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _corporation = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='status']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _status = $(this).attr('attr-id');
+                }
+            })
+            window.location.href="/teacher.php/Report/month/department/"+_department+"/profession/"+_profession+"/class/"+_class+"/corporation/"+_corporation+"/status/"+_status+"/keywords/"+$('#keywords').val();
+        });
+
+        $('.edit').click(function(){
+            var $url = "{:U('Report/edit')}";
+            var $id = $(this).attr('attr-id');
+            var $status = $(this).attr('attr-status');
+            $.post($url,{rid:$id,status:$status},function(msg){
+                window.location.href = msg;
             },'JSON');
+        });
+
+        $('#deleteall').click(function(){
+            var ids = new Array();
+            $('.cbox').each(function(i){
+                if($(this).attr('class')=='cbox on'){
+                    if($(this).attr('attr-id')>0)
+                    ids[ids.length]=$(this).attr('attr-id');
+                }
+            });
+            if(ids.length>0)
+                layer.confirm('您真的要删除选中记录吗?', {icon: 3, title:'删除记录'}, function(index){
+                    var $url = "{:U('Report/del')}";
+                    $.post($url,{id:ids},function(msg){
+                        if(msg.status==1){
+                            layer.msg(msg.message,{icon:6},function(){
+                                window.location.href="/teacher.php/Report/month";
+                            });
+                        }else{
+                            layer.msg(msg.message,{icon:5},function(){
+                                window.location.href="/teacher.php/Report/month";
+                            });
+                        }
+                    },'JSON');
+                })
+        });
+
+        //删除
+        $('.del').click(function(){
+            var $data = $(this).attr('attr-id');
+            layer.confirm('您真的要删除本条记录吗?', {icon: 3, title:'删除记录'}, function(index){
+                var $url = "{:U('Report/del')}";
+                $.post($url,{id:$data},function(msg){
+                    if(msg.status==1){
+                        layer.msg(msg.message,{icon:6},function(){
+                            window.location.href="/teacher.php/Report/month";
+                        });
+                    }else{
+                        layer.msg(msg.message,{icon:5},function(){
+                            window.location.href="/teacher.php/Report/month";
+                        });
+                    }
+                },'JSON');
+            });
         });
     });
 </script>
