--- a/Application/Student/View/Report/add.html
+++ b/Application/Student/View/Report/add.html
@@ -44,7 +44,7 @@
                             <label for="" class="control-label">标题</label>
                         </div>
                         <div class="col-sm-10">
-                            <input type="text" name="title" class="form-control" id="" style="width: 210px;" placeholder="请输入实习报告标题">
+                            <input type="text" name="title" class="form-control" id="" style="width: 210px;" placeholder="请输入实习报告标题" />
                         </div>
                     </div>
                     <div class="form-group">
