--- a/Application/Teacher/View/Practice/corporation.html
+++ b/Application/Teacher/View/Practice/corporation.html
@@ -70,7 +70,9 @@
                             &nbsp;
                             <a href="">导入</a>
                             &nbsp;
-                            <a href="">导出</a>
+                            <a href="{:U('Practice/exportCor')}">导出</a>
+                            &nbsp;
+                            <a href="javascript:void(0)" id="deleteall">删除</a>
                         </p>
                     </div>
                 </div>
@@ -88,7 +90,7 @@
                         </tr>
                         <volist name="list" id="v">
                             <tr>
-                                <td><a href="" class="cbox"></a></td>
+                                <td><a href="" class="cbox" attr-id="{$v.id}"></a></td>
                                 <input type="hidden" value="{$v.id}">
                                 <td>{$v.name}</td>
                                 <td>{$v.city}</td>
@@ -110,7 +112,7 @@
             <div class="ui-paging">
                 &nbsp;
                 <div class="pull-left">
-                    <a href="" class="cbox"><i></i>全选</a>
+                    <a href="" class="cbox" attr-id="0"><i></i>全选</a>
                 </div>
             </div>
         </div>
@@ -125,6 +127,31 @@
 </footer>
 <script>
     $(function(){
+        $('#deleteall').click(function(){
+            var ids = new Array();
+            $('.cbox').each(function(i){
+                if($(this).attr('class')=='cbox on'){
+                    if($(this).attr('attr-id')>0)
+                    ids[ids.length]=$(this).attr('attr-id');
+                }
+            });
+            if(ids.length>0)
+                layer.confirm('您真的要删除选中记录吗?', {icon: 3, title:'删除记录'}, function(index){
+                    var $url = "{:U('Practice/delCor')}";
+                    $.post($url,{id:ids},function(msg){
+                        if(msg.status==1){
+                            layer.msg(msg.message,{icon:6},function(){
+                                window.location.href="/teacher.php/Practice/corporation";
+                            });
+                        }else{
+                            layer.msg(msg.message,{icon:5},function(){
+                                window.location.href="/teacher.php/Practice/corporation";
+                            });
+                        }
+                    },'JSON');
+                })
+        });
+        
         $('.del').click(function(){
             var $id = $(this).attr('attr-id');
              layer.confirm("真的要删除本条数据吗？",{icon:3},function(){
