--- a/Application/Teacher/View/Report/index.html
+++ b/Application/Teacher/View/Report/index.html
@@ -20,54 +20,70 @@
         <div class="container">
             <div class="ht10"></div>
             <div class="ui-filter">
-                <div class="select">
-                    <select name="" id="">
-                        <option value="">提交人</option>
-                        <option value="">董嘉耀</option>
-                        <option value="">侯震</option>
-                        <option value="">郭德纲</option>
-                        <option value="">董嘉耀</option>
-                    </select>
-                </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">批阅情况</a></p>
+                    <p><a href="#">院系</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">已批阅</a></p>
-                            <p><a href="">未批阅</a></p>
+                            <volist name="department" id="v">
+                            <p><a href="javascript:void(0)" name="department" attr-id="{$v.id}">{$v.dname}</a></p>
+                            </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">班级</a></p>
+                    <p><a href="#">专业</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">机设011</a></p>
-                            <p><a href="">自动化002</a></p>
+                        <volist name="profession" id="v">
+                            <p><a href="" name="profession" attr-id="{$v.id}">{$v.name}</a></p>
+                        </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">实习单位</a></p>
+                    <p><a href="#">班级</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">金龙集团</a></p>
-                            <p><a href="">安溪太阳能</a></p>
+                            <volist name="class" id="v">
+                            <p><a href="" name="class" attr-id="{$v.id}">{$v.classname}</a></p>
+                            </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
-                <a href="" class="bt">查询</a>
+                <div class="select">
+                    <p><a href="#">实习单位</a></p>
+                    <div class="ex">
+                        <div class="list">
+                            <volist name="corporation" id="v">
+                            <p><a href="" name="corporation" attr-id="{$v.id}">{$v.name}</a></p>
+                            </volist>
+                        </div>
+                    </div>
+                </div>
+                <div class="select">
+                    <p><a href="#">批阅情况</a></p>
+                    <div class="ex">
+                        <div class="list">
+                            <p><a name="status" attr-id="2" href="">已批阅</a></p>
+                            <p><a name="status" attr-id="1" href="">未批阅</a></p>
+                        </div>
+                    </div>
+                </div>
+                <span class="wh10"></span>
+                <input type="text" class="text control-form" id="keywords" placeholder="请输入学号/姓名">
+                <span class="wh10"></span>
+                <a href="javascript:void(0)" class="bt">查询</a>
             </div>
             <div class="ht30"></div>
             <div class="ui-table">
                 <div class="hd">
                     <div class="tool">
                         <p>
-                            <a href="">导出</a>
+                            <a href="{:U('Report/exportWeek')}">导出</a>
                             &nbsp;
                             <a href="JavaScript:void(0)" id="delall">删除</a>
                         </p>
@@ -88,13 +104,13 @@
                         </tr>
                         <volist name="list" id="v">
                             <tr>
-                                <td><a href="" class="cbox"></a></td>
-                                <input type="hidden" name="id" value="{$v.id}">
+                                <td><a href="" class="cbox" attr-id="{$v.rid}"></a></td>
+                                <input type="hidden" name="id" value="{$v.rid}">
                                 <td>{$v.studentno}</td>
                                 <td>{$v.name}</td>
                                 <td>{$v.classname}</td>
                                 <td>{$v.pubtime}</td>
-                                <td>&nbsp;</td>
+                                <td>{$v.cname}</td>
                                 <td>{$v.status|setReportStatus}</td>
                                 <td>
                                     <a href="javascript:void(0)" class="edit" attr-id="{$v.rid}" attr-status="{$v.status}">查看</a>
@@ -111,18 +127,9 @@
             </volist>
             <div class="ht35"></div>
             <div class="ui-paging">
-                <span>共{$num}页，共{$count}条记录</span>
-                &nbsp;
-                <ul>
-                    <li><a href=""><</a></li>
-                    <li><a href="" class="on">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">></a></li>
-                </ul>
+                 {$page} 
                 <div class="pull-left">
-                    <a href="" class="cbox"><i></i>全选</a>
+                    <a href="" class="cbox" attr-id="0"><i></i>全选</a>
                 </div>
             </div>
         </div>
@@ -136,45 +143,39 @@
     </div>
 </footer>
 <script>
-    $(function(){
-        //查询
-//        $(".bt").click(function(){
-//            var $data = $('#query-form').serialize();
-//            var $url = "{:U('Report/index')}";
-//            $.ajax({
-//                'url':$url,
-//                'type':'post',
-//                'data': $data,
-//                'dataType':'json',
-//                success:function(msg){
-//                    var $table = $('.ct:eq(1) table');
-//                    $table.html('');
-//                    var content = '<tr>';
-//                    content += '<td><b>ID</b></td>';
-//                    content += '<td><b>学号</b></td>';
-//                    content += '<td><b>提交人</b></td>';
-//                    content += '<td><b>班级</b></td>';
-//                    content += '<td><b>提交时间</b></td>';
-//                    content += '<td><b>实习单位</b></td>';
-//                    content += '<td><b>评审结果</b></td>';
-//                    content += '<td><b>操作</b></td>';
-//                    content += '</tr>';
-//                    for(var $i=0;$i<msg.length;$i++){
-//                        content += '<tr>';
-//                        content += '<td>'+msg[$i].rid+'</td>';
-//                        content += '<td>'+msg[$i].studentno+'</td>';
-//                        content += '<td>'+msg[$i].name+'</td>';
-//                        content += '<td>'+msg[$i].classname+'</td>';
-//                        content += '<td>'+msg[$i].pubtime+'</td>';
-//                        content += '<td>'+' '+'</td>';
-//                        content += '<td>'+msg[$i].result+'</td>';
-//                        content += '<td><a href="javascript:void(0)" class="edit" attr-id="'+msg[$i].rid+'" attr-status="'+msg[$i].status+'">编辑</a>&nbsp;&nbsp;<a href="javascript:void(0)" class="del" attr-id="'+msg[$i].rid+'">删除</a> </td>';
-//                        content += '</tr>';
-//                    }
-//                    $table.html(content);
-//                }
-//            });
-//        });
+        $(function(){$('.bt').click(function(){
+            var _department = 0;
+            var _profession = 0;
+            var _class = 0;
+            var _corporation = 0;
+            var _status = 0;
+            $("a[name^='department']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _department = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='profession']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _profession = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='class']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _class = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='corporation']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _corporation = $(this).attr('attr-id');
+                }
+            })
+            $("a[name^='status']").each(function(i){
+                if($(this).attr('class')=='on'){
+                    _status = $(this).attr('attr-id');
+                }
+            })
+            window.location.href="/teacher.php/Report/index/department/"+_department+"/profession/"+_profession+"/class/"+_class+"/corporation/"+_corporation+"/status/"+_status+"/keywords/"+$('#keywords').val();
+        })
 
         //编辑
         $('.edit').click(function(){
@@ -184,6 +185,31 @@
             $.post($url,{rid:$id,status:$status},function(msg){
                 window.location.href = msg;
             },'JSON');
+        });
+
+         $('#delall').click(function(){
+            var ids = new Array();
+            $('.cbox').each(function(i){
+                if($(this).attr('class')=='cbox on'){
+                    if($(this).attr('attr-id')>0)
+                    ids[ids.length]=$(this).attr('attr-id');
+                }
+            });
+            if(ids.length>0)
+                layer.confirm('您真的要删除选中记录吗?', {icon: 3, title:'删除记录'}, function(index){
+                    var $url = "{:U('Report/del')}";
+                    $.post($url,{id:ids},function(msg){
+                        if(msg.status==1){
+                            layer.msg(msg.message,{icon:6},function(){
+                                window.location.href="/teacher.php/Report/index";
+                            });
+                        }else{
+                            layer.msg(msg.message,{icon:5},function(){
+                                window.location.href="/teacher.php/Report/index";
+                            });
+                        }
+                    },'JSON');
+                })
         });
 
         //删除
@@ -203,18 +229,6 @@
                     }
                 },'JSON');
             });
-        });
-
-        $('#delall').click(function(){
-            var $allBtn = $('.cbox:last');
-            var $ids = new Array();
-            if($allBtn.hasClass('on')){
-                var $items = $('.cbox:not(.cbox:last)');
-                for(var $i=0;$i<$items.length;$i++){
-                    console.log($items[$i].closest());
-                }
-
-            }
         });
     });
 </script>
