--- a/Application/Student/View/Contact/student.html
+++ b/Application/Student/View/Contact/student.html
@@ -30,39 +30,10 @@
         <div class="container">
             <div class="ht10"></div>
             <div class="ui-filter">
-                <div class="select">
-                    <p><a href="">院系</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">计算机学院</a></p>
-                            <p><a href="">水利学院</a></p>
-                        </div>
-                    </div>
-                </div>
                 <span class="wh10"></span>
-                <div class="select">
-                    <p><a href="">专业</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">机械设计</a></p>
-                            <p><a href="">机械自动化</a></p>
-                        </div>
-                    </div>
-                </div>
+                <input type="text" class="form-control text"  id="keywords" placeholder="请输入姓名或者学号">
                 <span class="wh10"></span>
-                <div class="select">
-                    <p><a href="">班级</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">机械设计002</a></p>
-                            <p><a href="">机械设计003</a></p>
-                        </div>
-                    </div>
-                </div>
-                <span class="wh10"></span>
-                <input type="text" class="form-control text" placeholder="请输入姓名">
-                <span class="wh10"></span>
-                <a href="" class="bt">查询</a>
+                <a href="javascript:void(0);" class="bt">查询</a>
             </div>
             <div class="ht30"></div>
             <div class="ui-table">
@@ -93,16 +64,7 @@
             </div>
             <div class="ht35"></div>
             <div class="ui-paging">
-                <span>共15页，共143条记录</span>
-                &nbsp;
-                <ul>
-                    <li><a href=""><</a></li>
-                    <li><a href="" class="on">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">></a></li>
-                </ul>
+                {$page}
             </div>
         </div>
     </div>
@@ -121,7 +83,7 @@
 
 </style>
 <script>
-    $(function(){
-
-    });
+        $('.bt').click(function() {
+           window.location.href='/index.php/student/contact/student/keywords/'+$('#keywords').val();
+        });
 </script>
