--- a/Application/Student/View/Contact/teacher.html
+++ b/Application/Student/View/Contact/teacher.html
@@ -13,7 +13,7 @@
                     <div class="ex">
                         <p><a href="">个人信息</a></p>
                         <p><a href="">修改密码</a></p>
-                        <p><a href="/index.php/student/login/logout">退出</a></p>
+                        <p><a href="/index.php/student/login/loginOut">退出</a></p>
                     </div>
                 </div>
             </div>
@@ -34,35 +34,16 @@
                     <p><a href="">院系</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">计算机学院</a></p>
-                            <p><a href="">水利学院</a></p>
+                            <volist name="department" id="vo">
+                                <p><a href="javascript:void(0);" name="department" attr-id="{$vo.id}">{$vo.dname}</a></p>
+                            </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
-                <div class="select">
-                    <p><a href="">专业</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">机械设计</a></p>
-                            <p><a href="">机械自动化</a></p>
-                        </div>
-                    </div>
-                </div>
+                <input type="text" class="form-control text" id="keywords" placeholder="请输入姓名">
                 <span class="wh10"></span>
-                <div class="select">
-                    <p><a href="">班级</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">机械设计002</a></p>
-                            <p><a href="">机械设计003</a></p>
-                        </div>
-                    </div>
-                </div>
-                <span class="wh10"></span>
-                <input type="text" class="form-control text" placeholder="请输入姓名">
-                <span class="wh10"></span>
-                <a href="" class="bt">查询</a>
+                <a href="javascript:void(0);"  class="bt">查询</a>
             </div>
             <div class="ht30"></div>
             <div class="ui-table">
@@ -91,16 +72,7 @@
             </div>
             <div class="ht35"></div>
             <div class="ui-paging">
-                <span>共15页，共143条记录</span>
-                &nbsp;
-                <ul>
-                    <li><a href=""><</a></li>
-                    <li><a href="" class="on">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">></a></li>
-                </ul>
+                {$page}
             </div>
         </div>
     </div>
@@ -119,7 +91,14 @@
 
 </style>
 <script>
-    $(function(){
 
-    });
+        var _department = 0;
+        $('.bt').click(function() {
+            $('a[name^=department]').each(function(i) {
+               if($(this).attr('class') == 'on')
+                   _department = $(this).attr('attr-id');
+            });
+            window.location.href = '/index.php/student/contact/teacher/department/'+_department+'/keywords/'+$('#keywords').val();
+        });
+
 </script>
