--- a/Application/Teacher/View/Contact/index.html
+++ b/Application/Teacher/View/Contact/index.html
@@ -6,14 +6,14 @@
         <div class="container">
             <div class="pull-right">
                 <div class="user">
-                    <p><img src="__PUBLIC__/teacher/img/avatar1.jpg" alt="">
-                        <a href="">董嘉耀</a>
+                    <p><img src="__PUBLIC__/Teacher/img/avatar1.jpg" alt="">
+                        <a href=''><?php echo getLoginUsername();?></a>
                         <i></i>
                     </p>
                     <div class="ex">
                         <p><a href="">个人信息</a></p>
                         <p><a href="">修改密码</a></p>
-                        <p><a href="">退出</a></p>
+                        <p><a href="/index.php/Teacher/login/logout">退出</a></p>
                     </div>
                 </div>
             </div>
