--- a/Application/Teacher/View/Contact/teacher.html
+++ b/Application/Teacher/View/Contact/teacher.html
@@ -1,24 +1,26 @@
 <include file="Contact/nav"/>
+<!-------------------------------------- 头部结束 -------------------------------------->
+<!-------------------------------------- 内容开始 -------------------------------------->
 <main>
     <div class="ui-head">
         <div class="container">
             <div class="pull-right">
                 <div class="user">
-                    <p><img src="__PUBLIC__/teacher/img/avatar1.jpg" alt="">
-                        <a href="">董嘉耀</a>
+                    <p><img src="__PUBLIC__/Teacher/img/avatar1.jpg" alt="">
+                        <a href=''><?php echo getLoginUsername();?></a>
                         <i></i>
                     </p>
                     <div class="ex">
                         <p><a href="">个人信息</a></p>
                         <p><a href="">修改密码</a></p>
-                        <p><a href="">退出</a></p>
+                        <p><a href="/index.php/Teacher/login/logout">退出</a></p>
                     </div>
                 </div>
             </div>
             <div class="tabs">
                 <ul>
-                    <li><a href="{:U('Contact/index')}">学生群</a></li>
-                    <li><a href="{:U('Contact/teacher')}" class="on">老师群</a></li>
+                    <li><a href="/index.php/Teacher/Contact/index">学生群</a></li>
+                    <li><a href="/index.php/Teacher/Contact/teacher" class="on">老师群</a></li>
                 </ul>
             </div>
         </div>
@@ -32,35 +34,16 @@
                     <p><a href="">院系</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">计算机学院</a></p>
-                            <p><a href="">水利学院</a></p>
+                            <volist name="department" id="vo">
+                                <p><a href="javascript:void(0);" name="department" attr-id="{$vo.id}">{$vo.dname}</a></p>
+                            </volist>
                         </div>
                     </div>
                 </div>
                 <span class="wh10"></span>
-                <div class="select">
-                    <p><a href="">专业</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">机械设计</a></p>
-                            <p><a href="">机械自动化</a></p>
-                        </div>
-                    </div>
-                </div>
+                <input type="text" class="form-control text" id="keywords" placeholder="请输入姓名">
                 <span class="wh10"></span>
-                <div class="select">
-                    <p><a href="">班级</a></p>
-                    <div class="ex">
-                        <div class="list">
-                            <p><a href="">机械设计002</a></p>
-                            <p><a href="">机械设计003</a></p>
-                        </div>
-                    </div>
-                </div>
-                <span class="wh10"></span>
-                <input type="text" class="form-control text" placeholder="请输入姓名">
-                <span class="wh10"></span>
-                <a href="" class="bt">查询</a>
+                <a href="javascript:void(0);" class="bt">查询</a>
             </div>
             <div class="ht30"></div>
             <div class="ui-table">
@@ -74,76 +57,22 @@
                             <td><b>所在部门</b></td>
                             <td><b>职位</b></td>
                         </tr>
+                        <volist name="list" id="vo">
                         <tr>
-                            <td>董嘉耀</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
+                            <td>{$vo.name}</td>
+                            <td>{$vo.teacherno}</td>
+                            <td>{$vo.phone}</td>
+                            <td>{$vo.dname}</td>
+                            <td>{$vo.identity}</td>
                         </tr>
-                        <tr>
-                            <td>郭德纲</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>于谦</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>董嘉耀</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>郭德纲</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>于谦</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>董嘉耀</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>郭德纲</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
-                        <tr>
-                            <td>于谦</td>
-                            <td>20161056</td>
-                            <td>15850684698</td>
-                            <td>所在部门1</td>
-                            <td>职位1</td>
-                        </tr>
+                        </volist>
                         </tbody>
                     </table>
                 </div>
             </div>
             <div class="ht35"></div>
             <div class="ui-paging">
-                {$page} 
+                {$page}
             </div>
         </div>
     </div>
@@ -155,3 +84,20 @@
 
     </div>
 </footer>
+<!-------------------------------------- 尾部开始 -------------------------------------->
+</body>
+</html>
+<style>
+
+</style>
+<script>
+        var _department = 0;
+        $('.bt').click(function() {
+           $('a[name^=department]').each(function(i){
+               if($(this).attr('class')== 'on')
+                 _department = $(this).attr('attr-id');
+           }) ;
+            window.location.href = '/index.php/teacher/contact/teacher/department/'+_department+'/keywords/'+$('#keywords').val();
+
+        });
+</script>
